# examples

./: README.md
bash/: bash_aliases
cinnamon/: titlebar_off.sh  titlebar_on.sh  workspace_switcher.sh
cpp_guideline/: cpp_guideline.tex
cpp_guideline/small_codes/: CMakeLists.txt  class_pointers.cpp  class_rational.cpp  compile.sh  rule_five.cpp  span.cpp  this_type_function.cpp  virt_fn_ctor.cpp
